force-app/main/default/objects/ccrz__E_CategoryMedia__c/ccrz__E_CategoryMedia__c.object-meta.xml
<CustomObject>
    <description>Associated images for a Category</description>
    <label>CC Category Media</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Category Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Category Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>