force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__AltMessage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AltMessage__c</fullName>
    <description>Alternate text - this is the message to display if the image cannot be found or rendered by the browser</description>
    <label>AltMessage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>