force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <description>Reference to the category entry to which this media corresponds</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>Category Media</relationshipLabel>
    <relationshipName>Category_Medias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>