force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__CategoryMediaId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategoryMediaId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External id for this entry - can be used for updates</description>
    <externalId>true</externalId>
    <label>Category Media Ext Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>