force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EndDate__c</fullName>
    <description>The last date for which this media record is active. This is the last date the image will be displayed</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>