force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>Locale corresponding to this entry. Different locales can have different category images</description>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>