force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__ProductMediaSource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductMediaSource__c</fullName>
    <description>Source of the image. Values are &quot;URL&quot;, &quot;Static Resource&quot; and &quot;Attachment&quot;</description>
    <label>Category Media Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Static Resource</fullName>
            </value>
            <value>
                <fullName>URI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>