force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StaticResourceName__c</fullName>
    <description>Name of a static resource that contains this media.</description>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>