force-app/main/default/objects/ccrz__E_CategoryMedia__c/fields/ccrz__URI__c.field-meta.xml
<CustomField>
    <fullName>ccrz__URI__c</fullName>
    <description>If the source is a URL, contains the full URL to the image. This should reference a location with secure storage (SSL defined)</description>
    <label>URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>